# ChangeLog for media-video/tcmplex-panteltje
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/tcmplex-panteltje/ChangeLog,v 1.4 2005/12/14 10:30:57 hd_brummy Exp $

*tcmplex-panteltje-0.4.7 (14 Dec 2005)

  14 Dec 2005; Joerg Bornkessel <hd_brummy@gentoo.org>
  +tcmplex-panteltje-0.4.7.ebuild:
  version bump, bug #96805, thx to Michael Mauch <michael.mauch@gmx.de>

  10 Jun 2004; David Holm <dholm@gentoo.org> tcmplex-panteltje-0.3.ebuild:
  Added to ~ppc.

*tcmplex-panteltje-0.3 (09 Jun 2004)

  09 Jun 2004; Thomas Raschbacher <lordvan@gentoo.org> +metadata.xml,
  +files/tcmplex-panteltje-0.3.patch, +tcmplex-panteltje-0.3.ebuild:
  initial import
  bug #52411, thanks to Stefan Briesenick <sbriesen@gmx.de>
